5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1708_3061.log
== TEST (2019-04-29 14:15:27) 
-- CODE:
ataque = int(input("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ataque = int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:15:29) 
-- CODE:
ataque = int(input("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- EXECUTION TIME:
0.129123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3061/main.py", line 1, in <module>
    ataque = int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:15:30) 
-- CODE:
ataque = int(input("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ataque = int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:15:30) 
-- CODE:
ataque = int(input("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- EXECUTION TIME:
0.253699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3061/main.py", line 1, in <module>
    ataque = int(input())
ValueError: invalid literal for int() with base 10: 'AEREO'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:15:58) 
-- CODE:
ataque = input(int("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ataque = input(int("Tipo de ataque: "))
ValueError: invalid literal for int() with base 10: 'Tipo de ataque: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:00) 
-- CODE:
ataque = input(int("Tipo de ataque: "))
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ataque = input(int("Tipo de ataque: "))
ValueError: invalid literal for int() with base 10: 'Tipo de ataque: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:10) 
-- CODE:
ataque = input("Tipo de ataque: ")
quant = float(input("Quantidade de unidades a serem destrúidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:28) 
-- CODE:
ataque = input("Tipo de ataque: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:16:29) 
-- CODE:
ataque = input("Tipo de ataque: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:16:29) 
-- CODE:
ataque = input("Tipo de ataque: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- EXECUTION TIME:
0.191247
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1708/3061/main.py", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:33) 
-- CODE:
ataque = input("Tipo de ataque: TERRESTRE/AEREO/MARITIMO")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:17:54) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == TERRESTRE):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (ataque == TERRESTRE):
NameError: name 'TERRESTRE' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:18:40) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragão = "DROGON"
	unid = quant//150
elif(ataque == AEREO):
	dragão = "RHAEGAL"
	unid = quant//30
elif(ataque == MARITIMO):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(ataque == AEREO):
NameError: name 'AEREO' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:30) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:19:43) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)





-- EXECUTION TIME:
0.172128
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:52) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:19:53) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.194534
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:19:53) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:21:06) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif(quant<0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.133827
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 13
    elif(quant<0)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:06) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif(quant<0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 13
    elif(quant<0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:08) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif(quant<0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 13
    elif(quant<0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:18) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 13
    elif( quant < 0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:21:20) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.145779
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 13
    elif( quant < 0)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:21) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0)
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 13
    elif( quant < 0)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:21:33) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:01) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:38) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:22:40) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.219624
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:22:45) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:20) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(int(unid))
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:23:23) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(int(unid))
-- EXECUTION TIME:
0.188672
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:23:23) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
elif( quant < 0):
	print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(int(unid))
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:24:19) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(int(unid))
-- OUTPUT:
RHAEGAL
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:01) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(int(unid + 1)
-- ERROR:
File "XXXX", line 18
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:14) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(int(unid + 1)
-- ERROR:
File "XXXX", line 18
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:20) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(int(unid)
-- ERROR:
File "XXXX", line 18
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:31) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:25:49) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:26:04) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:41) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))
from math import
if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 3
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:27:43) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))
from math import
if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.210911
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 3
    from math import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:43) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("QuantidaDe de unidades a serem destruidas: "))
from math import
if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 3
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:27:56) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:30:17) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (ataque == "TERRESTRE"):
	dragao = "DROGON"
	unid = quant//150
elif(ataque == "AEREO"):
	dragao = "RHAEGAL"
	unid = quant//30
elif(ataque == "MARITIMO"):
	dragao = "VISERION"
	unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:32:08) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0)
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.190355
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 4
    if (quant > 0)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:32:09) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0)
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- ERROR:
File "XXXX", line 4
    if (quant > 0)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:33:08) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.190875
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:09) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:33:21) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- EXECUTION TIME:
0.144513
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:33:34) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:34:56) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")

print(dragao)
print(unid)
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:21) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:28) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:54) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:36:55) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.228379
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:

-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:

-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:36:56) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:03) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:37) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:37:39) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.154434
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 16
    else:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:37:39) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:09) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:38:10) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.158956
-- ERROR:
  File "/home/codebench/codes/1708/3061/main.py", line 16
    else:
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:10) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
print(dragao)
print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:30) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	print(dragao)
	print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:38:32) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
	print(dragao)
	print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:24) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:39:33) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.181726
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
14.0
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
0.0
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
11.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:39:36) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:28) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 14:41:29) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = float(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- OUTPUT:
RHAEGAL
14.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 14:43:08) 
-- CODE:
ataque = input("Tipo de ataque TERRESTRE/AEREO/MARITIMO: ")
quant = int(input("Quantidade de unidades a serem destruidas: "))

if (quant > 0):
	if (ataque == "TERRESTRE"):
		dragao = "DROGON"
		unid = quant//150 + 1
		print(dragao)
		print(unid)
	elif(ataque == "AEREO"):
		dragao = "RHAEGAL"
		unid = quant//30 + 1
		print(dragao)
		print(unid)
	elif(ataque == "MARITIMO"):
		dragao = "VISERION"
		unid = quant//40 + 1
		print(dragao)
		print(unid)
	else:
		print("Entrada invalida")
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.136065
-- TEST CASE 1:
---- input:
AEREO
425
---- correct output:
RHAEGAL
15
---- user output:
RHAEGAL
15
-- TEST CASE 2:
---- input:
TERRESTRE
65
---- correct output:
DROGON
1
---- user output:
DROGON
1
-- TEST CASE 3:
---- input:
MARITIMO
452
---- correct output:
VISERION
12
---- user output:
VISERION
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
